<resources>
    <string name="app_name">QuizApp</string>
    <string name="abund_quizapp_title">A+ Certification Test</string>
    <string name="question_1">Name a major PC manufacturer?</string>
    <string name="checkbQ2_OutputDevices">What are examples of output devices?</string>
    <string name="checkbQ2_OutputDevices_1">Keyboard</string>
    <string name="checkbQ2_OutputDevices_2">Monitor</string>
    <string name="checkbQ2_OutputDevices_3">Mouse</string>
    <string name="checkbQ2_OutputDevices_4">Printer</string>
    <string name="radioBQ3_PCProcessors">Which is a popular PC processor manufacturer in the US?</string>
    <string name="question_4">Name a popular operating system?</string>
    <string name="question_5">Wired family of technologies to connect computers:</string>
    <string name="radioBQ3_PCProcessors_1">AMD</string>
    <string name="q3_choice_2">VIA</string>
    <string name="q3_choice_3">Fairchild</string>
    <string name="editTQ1_PCManuf_Hint">Enter Manufacturer Here</string>
    <string name="editTQ4_PopularOS_Hint">Enter Operating System here</string>
    <string name="editTQ5_ConnectTech_Hint">Enter technology name here</string>
    <string name="submit">Submit</string>
    <string name="results_text_view">Answer the above questions then press submit for score.</string>
    <string name="A_score">✨You scored an A. Great job!🎉</string>
    <string name="B_score">You scored a B.  Hard work pays off.🎉</string>
    <string name="C_score">You scored a C.  You made it!🎉</string>
    <string name="low_score">You\'ve got a few wrong.  Want to try again?</string>
</resources>