<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:padding="20dp"
        android:background="@color/comptia_logo_red"
        android:src="@drawable/comptia_logo_white_wide" />

    <TextView
        android:id="@+id/QuizAppBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent"
        android:fontFamily="sans-serif-thin"
        android:text="@string/abund_quizapp_title"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingLeft="10dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/results_text_view"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />

            <TextView
                style="@style/question_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <EditText
                android:id="@+id/editTQ1_PCManuf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/purple_700"
                android:focusedByDefault="false"
                android:hint="@string/editTQ1_PCManuf_Hint" />

            <TextView
                style="@style/question_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbQ2_OutputDevices" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkbQ2_OutputDevices_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/checkbQ2_OutputDevices_1" />

                <CheckBox
                    android:id="@+id/checkbQ2_OutputDevices_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/checkbQ2_OutputDevices_2" />

                <CheckBox
                    android:id="@+id/checkbQ2_OutputDevices_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/checkbQ2_OutputDevices_3" />

                <CheckBox
                    android:id="@+id/checkbQ2_OutputDevices_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/checkbQ2_OutputDevices_4" />
            </LinearLayout>

            <TextView
                android:id="@+id/radioBQ3_PCProcessors"
                style="@style/question_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radioBQ3_PCProcessors" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioBQ3_PCProcessors_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/radioBQ3_PCProcessors_1" />

                    <RadioButton
                        android:id="@+id/radioBQ3_PCProcessors_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/q3_choice_2" />

                    <RadioButton
                        android:id="@+id/radioBQ3_PCProcessors_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/q3_choice_3" />
                </RadioGroup>
            </LinearLayout>

            <TextView
                style="@style/question_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <EditText
                android:id="@+id/editTQ4_PopularOS"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                android:hint="@string/editTQ4_PopularOS_Hint" />

            <TextView
                style="@style/question_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <EditText
                android:id="@+id/editTQ5_ConnectTech"
                style="@style/edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="false"
                android:hint="@string/editTQ5_ConnectTech_Hint" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:text="@string/submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>